--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ common:
 
 #### Links
 links:
-  王明明: xzfg.github.io
+  王振镇: townwang.com
 
 # gavatar头像及Favicon
 gavatar : /assets/img/gavatar.png
