--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ author:
   weibo_username:  心中放歌的围脖
 
 # 站点信息
-title : Town
+title : 心中放歌
 description: 做成功的准备就是准备成功.
 url: http://xzfg.github.io/
 rss_url: /feed.xml
